--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/vue": "^2.2.0",
     "axios": "^1.13.2",
     "heroicons": "^2.2.0",
+    "lucide-vue-next": "^0.563.0",
     "pinia": "^3.0.4",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4"
